// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Games API > should parse a list response 1`] = `
[
  {
    "id": 314,
    "lastUpdate": "2013-11-11T00:00:00Z",
    "name": "The uninvited guest",
    "numLikes": 2,
  },
  {
    "id": 317,
    "lastUpdate": "2013-03-13T00:00:00Z",
    "name": "Cromexx Funhouse for NWN 1",
    "numLikes": 1,
  },
  {
    "id": 66,
    "lastUpdate": "2013-01-12T00:00:00Z",
    "name": "Vampire Fate",
    "numLikes": 41,
  },
]
`;

exports[`Games API > should parse a viewgame response 1`] = `
{
  "adultThemes": [
    {
      "abbreviation": "MF",
      "id": 33,
      "name": "Male/Female",
    },
    {
      "abbreviation": "FF",
      "id": 34,
      "name": "Female/Female",
    },
    {
      "abbreviation": "MM",
      "id": 35,
      "name": "Male/Male",
    },
    {
      "abbreviation": "F-Self",
      "id": 37,
      "name": "Female Masturbation",
    },
    {
      "abbreviation": "M-Self",
      "id": 36,
      "name": "Male Masturbation",
    },
    {
      "abbreviation": "Sub",
      "id": 41,
      "name": "Submission",
    },
    {
      "abbreviation": "Dom",
      "id": 42,
      "name": "Domination",
    },
  ],
  "authors": [
    {
      "id": 38045,
      "name": "Deedee",
    },
    {
      "id": 51960,
      "name": "psy",
    },
  ],
  "id": 1445,
  "lastUpdate": "2024-05-12T00:00:00Z",
  "multimediaThemes": [
    {
      "abbreviation": "2-D",
      "id": 24,
      "name": "2-D Graphics",
    },
    {
      "abbreviation": "Rend",
      "id": 26,
      "name": "3-D Renders",
    },
    {
      "abbreviation": "Draw",
      "id": 27,
      "name": "Drawings",
    },
    {
      "abbreviation": "SFX",
      "id": 30,
      "name": "Sound Effects",
    },
    {
      "abbreviation": "Video",
      "id": 31,
      "name": "Video",
    },
  ],
  "name": "Secretary",
  "numLikes": 4350,
  "releaseDate": "2017-10-01T18:57:00Z",
  "transformationThemes": [
    {
      "abbreviation": "BE",
      "id": 4,
      "name": "Breast Enlargement",
    },
    {
      "abbreviation": "Grow",
      "id": 7,
      "name": "Growth/Expansion",
    },
    {
      "abbreviation": "Invol",
      "id": 8,
      "name": "Involuntary",
    },
    {
      "abbreviation": "M2F",
      "id": 9,
      "name": "Male to Female (Genital Changes)",
    },
    {
      "abbreviation": "Fem",
      "id": 45,
      "name": "Feminization",
    },
    {
      "abbreviation": "Slow",
      "id": 40,
      "name": "Slow Transformation",
    },
    {
      "abbreviation": "MC",
      "id": 10,
      "name": "Mental Changes",
    },
    {
      "abbreviation": "Bimbo",
      "id": 15,
      "name": "Bimbo",
    },
    {
      "abbreviation": "Herm",
      "id": 16,
      "name": "Hermaphrodite",
    },
    {
      "abbreviation": "Corr",
      "id": 39,
      "name": "Corruption",
    },
    {
      "abbreviation": "SheM",
      "id": 19,
      "name": "Shemale",
    },
    {
      "abbreviation": "Vol",
      "id": 23,
      "name": "Voluntary",
    },
    {
      "abbreviation": "Sissy",
      "id": 44,
      "name": "Sissification",
    },
  ],
  "versions": [
    {
      "downloads": [
        {
          "link": "https://www.mediafire.com/file/hl1azwap3l1xy5x/secretary1013.rar/file",
          "name": "mediafire.com",
          "note": "MediaFire",
        },
        {
          "link": "https://mega.nz/file/sOJzXLYT#V00E8-ZClD9Ej9G7Oloavt41F8NJQ_0GQm2ppvdXUxo",
          "name": "mega.nz",
          "note": "Mega",
        },
      ],
      "version": "1.0.1.3",
    },
    {
      "downloads": [
        {
          "link": "https://www.mediafire.com/file/rwlg3u68598r1hb/secretary1005.rar/file",
          "name": "mediafire.com",
          "note": "MediaFire",
        },
        {
          "link": "https://mega.nz/file/xbQWjQRD#yxVeWBth7AzAeX03h6GJ6_ptd7j8mEsAdQZb1Mf_UW4",
          "name": "mega.nz",
          "note": "Mega",
        },
      ],
      "version": "1.0.0.5",
    },
  ],
}
`;

exports[`Games API > should parse a viewgame response 2 1`] = `
{
  "adultThemes": [
    {
      "abbreviation": "MF",
      "id": 33,
      "name": "Male/Female",
    },
    {
      "abbreviation": "MM",
      "id": 35,
      "name": "Male/Male",
    },
    {
      "abbreviation": "Other",
      "id": 38,
      "name": "Other",
    },
  ],
  "authors": [
    {
      "id": 160407,
      "name": "MariaMod",
    },
  ],
  "id": 3227,
  "lastUpdate": "2024-06-14T00:00:00Z",
  "multimediaThemes": [
    {
      "abbreviation": "2-D",
      "id": 24,
      "name": "2-D Graphics",
    },
    {
      "abbreviation": "Draw",
      "id": 27,
      "name": "Drawings",
    },
  ],
  "name": "S.L.A.T. Foundation",
  "numLikes": 139,
  "releaseDate": "2024-03-17T00:00:00Z",
  "transformationThemes": [
    {
      "abbreviation": "BE",
      "id": 4,
      "name": "Breast Enlargement",
    },
    {
      "abbreviation": "M2F",
      "id": 9,
      "name": "Male to Female (Genital Changes)",
    },
    {
      "abbreviation": "Fem",
      "id": 45,
      "name": "Feminization",
    },
    {
      "abbreviation": "MC",
      "id": 10,
      "name": "Mental Changes",
    },
    {
      "abbreviation": "Poss",
      "id": 12,
      "name": "Possession",
    },
    {
      "abbreviation": "Shrink",
      "id": 14,
      "name": "Shrinking",
    },
    {
      "abbreviation": "Corr",
      "id": 39,
      "name": "Corruption",
    },
    {
      "abbreviation": "SheM",
      "id": 19,
      "name": "Shemale",
    },
    {
      "abbreviation": "Vol",
      "id": 23,
      "name": "Voluntary",
    },
    {
      "abbreviation": "Sissy",
      "id": 44,
      "name": "Sissification",
    },
  ],
  "versions": [
    {
      "downloads": [
        {
          "link": "https://MilkyNail.site/slat.zip",
          "name": "milkynail.site",
          "note": "Online/Offline version with pics",
        },
      ],
      "version": "All versions",
    },
  ],
}
`;
